--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -52,3 +52,7 @@
 [[constraint]]
   name = "github.com/confluentinc/confluent-kafka-go"
   version = "0.11.6"
+
+[[constraint]]
+  name = "github.com/beevik/etree"
+  version = "1.1.0"
