--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -56,3 +56,7 @@
 [[constraint]]
   name = "github.com/beevik/etree"
   version = "1.1.0"
+
+[[constraint]]
+  name = "github.com/jinzhu/gorm"
+  version = "1.9.2"
